// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio-button/presenters/RadioButtonPresenter renders with all props 1`] = `
<div
  className="hig__radio-button hig__radio-button--required hig__radio-button--checked"
>
  <input
    checked={true}
    className="hig__radio-button__input"
    disabled={true}
    name="RadioButton"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="radio"
    value="value"
  />
  <span
    className="hig__radio-button__wrapper hig__radio-button__wrapper--checked hig__radio-button__wrapper--disabled"
  >
    <span
      className="hig__radio-button__wrapper__button"
    />
    <span
      className="hig__radio-button__wrapper__button--disabled"
    />
  </span>
  <label
    className="hig__radio-button__label"
  >
    HELLO
  </label>
</div>
`;

exports[`radio-button/presenters/RadioButtonPresenter renders without props 1`] = `
<div
  className="hig__radio-button"
>
  <input
    className="hig__radio-button__input"
    disabled={false}
    id="radio-button-1"
    name="radiobutton"
    type="radio"
    value="value"
  />
  <span
    className="hig__radio-button__wrapper"
  >
    <span
      className="hig__radio-button__wrapper__button"
    />
    <span
      className="hig__radio-button__wrapper__button--disabled"
    />
  </span>
  <label
    className="hig__radio-button__label"
    htmlFor="radio-button-1"
  />
</div>
`;
